--- a/src/components/organisms/Navbar/Navbar.module.css
+++ b/src/components/organisms/Navbar/Navbar.module.css
@@ -1,6 +1,45 @@
 /* =========================
    HEADER
 ========================= */
+/* ===== MOBILE HEADER ===== */
+.mobileHeader {
+    display: none;
+    align-items: center;
+    width: 100%;
+}
+
+.hamburger {
+    background: none;
+    border: none;
+    font-size: 26px;
+    cursor: pointer;
+    padding: 6px 10px;
+}
+
+.mobileRight {
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+
+    .nav,
+    .actions {
+        display: none;
+    }
+
+    .mobileHeader {
+        display: flex;
+    }
+
+    .logo {
+        flex: 1;
+        text-align: center;
+        font-size: 20px;
+    }
+}
+
+
 .header {
     position: sticky;
     top: 0;
